<resources>
    <string name="app_name">ForWalk</string>
    <string name="title_activity_maps">Map</string>
    <string name="introduction">For Walk는 시각장애인용 지팡이의 \n가능성을 높여주는 서비스 입니다.</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="user">사용자</string>
    <string name="protector">보호자</string>
    <string name="sign_up">아직 회원이 아니신가요?</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign in or register</string>
    <string name="action_sign_up_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"로그인에 실패하였습니다. 다시 시도해주세요."</string>
    <string name="map">현재 위치</string>
    <string name="sign_up_complete">회원 가입</string>
    <string name="sign_up_success">회원 가입이 완료되었습니다</string>
    <string name="sign_up_fail">회원 가입에 실패하였습니다</string>
    <string name="name">이름</string>
    <string name="connect">연동할 계정</string>
    <string name="phone">핸드폰 번호</string>
    <string name="pro_info">보호자 정보가 없습니다</string>
    <string name="rel">관계</string>
    <string name="del_auto_login">자동로그인 해제</string>
    <string name="req_id_pw">아이디 또는 패수워드를 입력해주세요.</string>
</resources>
